@@ -82,6 +82,7 @@ m4_include([queryparam.at])
 m4_include([or.at])
 m4_include([not.at])
 m4_include([fromfile.at])
+m4_include([patfile.at])
 m4_include([basicauth.at])
 m4_include([acl.at])
 m4_include([dynacl.at])
